fixed spacing problem at bottom of scrolling text

--- a/sass/blackboard_gallery.scss
+++ b/sass/blackboard_gallery.scss
@@ -105,7 +105,6 @@ $blackboardHeight: 260px;
         p {
             margin-left: 10px;
             margin-right: 10px;
-            margin-bottom: 0;
             text-align: justify;
             
             &.author {
